syntax="proto3";
option go_package="Task/protos";

import "google/protobuf/timestamp.proto";



service Tracker{
    rpc AddUser(AddUserRequest)returns(AddUserResponse);
    rpc AddActivity(AddActivityReq)returns(AddActivityRes);
    rpc UpdateActivites(UpdateActivityReq)returns(UpdateActivityRes);
    // rpc Update(RecordReq)returns(Response);
    rpc Find(FindUserReq)returns(FindUserRes);
    // rpc FindActivity(SearchActivity)returns(Record);
    // rpc FindUserByActivity(SearchActivity)returns(stream Record);
}
message Empty{}
message User{
    string name=1;
    string email=2;
    int64 phone=3;
}
enum Activity {
    play=0;
    eat=1;
    sleep=2;
    read=3;
}
message AddActivityReq{
    string email=1;
    Activity activity=2;
}
message AddActivityRes{
    string response=1;
}
message AddUserRequest{
    User user=1;  
}
message AddUserResponse{
    string response=1;
}
message UpdateActivityReq{
    string email=1;
    string Activity=2;
}
message UpdateActivityRes{
    string Response=1;
}
message FindUserReq{
    string email=1;  
}
message FindUserRes{
    User user=1;
    repeated Activity activities=2; 
}

